server side boilerplate, need to use htmx for client

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{{ define "content" }}
-<h2>About Us</h2>
-<p>This is a simple website made with Go.</p>
+{{ define "about" }}
+<h2>About</h2>
+<p>I made this in order to brush up on Go, learn HTMX and use for my preparation for HSK 1.</p>
 {{ end }}
