--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,6 @@
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
   padding: 2rem;
   display: flex;
