--- a/templates/base.html
+++ b/templates/base.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./static/index.css">
-  <title>HSK 1 Identifying Characters Test</title>
+  <title>HSK 1 3.0 Character Identification</title>
+  <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
-  <header>
-    <h1>HSK 1 Identifying Characeters Test</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/test">Test</a>
-    </nav>
-  </header>
-  <main>
-    {{ template "content" . }}
-  </main>
+  <div>
+    <header>
+      {{ template "header" . }}
+    </header>
+    <main>
+      {{ template "content" . }}
+    </main>
+    <footer>
+      {{ template "footer" . }}
+    </footer>
+  </div>
 </body>
 </html>
