--- a/static/index.css
+++ b/static/index.css
@@ -7,3 +7,11 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+body > div {
+  width: 100ch;
+}
+
+.chinese-character {
+  border: 1px black;
+}
