--- a/templates/chinese_test.html
+++ b/templates/chinese_test.html
@@ -1,3 +1,3 @@
 {{ define "chinese_test" }}
-TBD. Gonna involve htmx.
+<button hx-get="/api/chinese-character" hx-swap="outerHTML">Start Test</button>
 {{ end }}
