--- a/templates/check-answer.html
+++ b/templates/check-answer.html
@@ -6,5 +6,5 @@
     <p>Incorrect: The right answer was {{ .CorrectPinyinAnswer }} </p>
   {{ end }}
 
-  <button hx-get="/api-chinese-character" hx-target="#answer-result">Next Question</button>
+  <button hx-get="/api/chinese-character" hx-target="#answer-result">Next Question</button>
 </div>
