--- a/templates/chinese_test.html
+++ b/templates/chinese_test.html
@@ -1,3 +1,4 @@
 {{ define "chinese_test" }}
+<p>score: 0</p>
 <button hx-get="/api/chinese-character" hx-swap="outerHTML">Start Test</button>
 {{ end }}
