--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/static/index.css">
   <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
-<body>
-  <div>
+<body class="p-8 flex flex-col items-center">
+  <div class="w-[70ch] border border-solid border-black">
     <header>
       {{ template "header" . }}
     </header>
