--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
-<h1>HSK 1 3.0 Character Identification</h1>
-<nav>
+<h1 class="text-3xl">HSK 1 3.0 Character Identification</h1>
+<nav class="py-2">
   <a href="/">home</a>
   <a href="/about">about</a>
   <a href="/contact">contact</a>
