--- a/templates/chinese_test.html
+++ b/templates/chinese_test.html
@@ -1,6 +1,6 @@
 {{ define "chinese_test" }}
-<div class="p-8 border borders-solid border-black h-[50vh] flex flex-col justify-center" id="test">
+<div class="p-8 h-[50vh] flex flex-col justify-center border border-gray-100 border-2 rounded-md" style="box-shadow: 0 2px 2px rgba(0,0,0,.3);" id="test">
   <p>This test will randomly show you one of 500 chinese characters from HSK 1.  You must input the correct pinyin corresponding to it.</p>
-  <button class="border rounded-md border-solid p-2 mt-3" hx-get="/api/chinese-character" hx-target="#test" hx-swap="">Start Test</button>
+  <button class="border rounded-md border-solid border-gray-400 p-2 mt-3" hx-get="/api/chinese-character" hx-target="#test" hx-swap="">Start Test</button>
 </div>
 {{ end }}
