--- a/templates/check-answer.html
+++ b/templates/check-answer.html
@@ -1,10 +1,13 @@
 <div id="answer-result">
-  <p>{{ .ChineseCharacter }}</p>
-  {{ if eq .CorrectPinyinAnswer .UserPinyinAnswer }}
-    <p>Correct: {{ .CorrectPinyinAnswer }} </p>
-  {{ else }}
-    <p>Incorrect: The right answer was {{ .CorrectPinyinAnswer }} </p>
-  {{ end }}
-
-  <button hx-get="/api/chinese-character" hx-target="#answer-result">Next Question</button>
+  <div class="flex flex-col justify-center items-center text-7xl p-8">
+    {{ .ChineseCharacter  }}
+  </div>
+  <div class="flex flex-col items-center gap-3">
+    {{ if eq .CorrectPinyinAnswer .UserPinyinAnswer }}
+      <p><emph class="color-green-500">Correct</emph>: {{ .CorrectPinyinAnswer }} </p>
+    {{ else }}
+      <p>Incorrect: The right answer was {{ .CorrectPinyinAnswer }} </p>
+    {{ end }}
+    <button hx-get="/api/chinese-character" hx-target="#answer-result" class="border border-solid border-gray-400 border-[1px] py-2 px-4 rounded-md mt-3">Next Question</button>
+  </div>
 </div>
