--- a/templates/check-answer.html
+++ b/templates/check-answer.html
@@ -1,4 +1,4 @@
-<div id="answer-result">
+<div id="answer-result" style="box-shadow: 0 2px 2px rgba(0,0,0,.3);" class="border border-gray-100 border-2 rounded-md h-full flex flex-col justify-center relative">
   <div class="flex flex-col justify-center items-center text-7xl p-8">
     {{ .ChineseCharacter  }}
   </div>
@@ -8,6 +8,6 @@
     {{ else }}
       <p>Incorrect: The right answer was {{ .CorrectPinyinAnswer }} </p>
     {{ end }}
-    <button hx-get="/api/chinese-character" hx-target="#answer-result" class="border border-solid border-gray-400 border-[1px] py-2 px-4 rounded-md mt-3">Next Question</button>
+    <button hx-get="/api/chinese-character" hx-target="#answer-result" class="border border-solid border-gray-400 border-[1px] py-2 px-4 rounded-md mt-3" hx-swap="outerHTML">Next Question</button>
   </div>
 </div>
