--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/static/index.css">
   <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
-<body class="p-20 flex flex-col items-center h-screen">
-  <div class="w-[70ch] h-full gap-4 flex flex-col justify-between">
+<body class="p-4 md:p-20 flex flex-col items-center h-screen">
+  <div class="w-full md:w-[70ch] h-full gap-4 flex flex-col justify-between">
     <header>
       {{ template "header" . }}
     </header>
