--- a/templates/single-character-question.html
+++ b/templates/single-character-question.html
@@ -4,7 +4,7 @@
   </div>
   <form hx-get="api/check-answer" hx-target="#question-and-answer-form" hx-swap="outerHTML" class="flex flex-col items-center gap-3">
     <div class="grow-1 flex flex-col items-center gap-4">
-      <input name="user-answer" id="user-answer" type="text" class="border border-solid border-1 border-gray-400 p-4 block text-center text-3xl font-semibold">
+      <input name="user-answer" id="user-answer" type="text" class="border border-solid border-1 border-gray-400 p-4 block text-center text-3xl font-semibold w-full">
       <input name="correct-answer" type="hidden" value="{{ .Pinyin }}">
       <input name="chinese-character" type="hidden" value="{{ .ChineseCharacter }}">
       <button type="submit" class="bg-sky-100 border border-solid border-gray-400 border-[1px] py-2 px-4 rounded-md">Submit</button>
