--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,22 @@
 <body class="p-4 md:p-20 flex flex-col items-center h-screen">
   <div class="w-full md:w-[70ch] h-full gap-4 flex flex-col justify-between">
     <header>
-      {{ template "header" . }}
+      {{ block "header" .}}
+        <h1 class="text-3xl">HSK 1 3.0 Character Identification</h1>
+        <nav class="py-2">
+          <a href="/">home</a>
+          <a href="/about">about</a>
+          <a href="/contact">contact</a>
+        </nav>
+      {{ end }}
     </header>
     <main class="grow-1">
       {{ template "content" . }}
     </main>
     <footer>
-      {{ template "footer" . }}
+      {{ block "footer" . }}
+        Made by Edward
+      {{ end }}
     </footer>
   </div>
 </body>
