refactored, each page has its own template

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{{ define "about" }}
+{{ define "content" }}
 <h2>About</h2>
 <p>I made this in order to brush up on Go, learn HTMX and use for my preparation for HSK 1.</p>
 {{ end }}
