--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-{{ define "contact" }}
+{{ define "content" }}
 <h2>Contact</h2>
 Here's my <a href="https://github.com/edward-20">github</a>.
 {{ end }}
