--- a/templates/single-character-question.html
+++ b/templates/single-character-question.html
@@ -1,4 +1,4 @@
-{{ define "content" . }}
+{{ define "content" }}
 <div id="question-and-answer-form" style="box-shadow: 0 2px 2px rgba(0,0,0,.3);" class="border border-gray-100 border-2 rounded-md h-full flex flex-col justify-center relative">
   <div class="flex flex-col justify-center items-center text-7xl p-8">
     {{ .ChineseCharacter  }}
@@ -52,3 +52,4 @@
     })()
   </script>
 </div>
+{{ end }}
