--- a/templates/test-resume.html
+++ b/templates/test-resume.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
 <div class="p-8 h-full flex flex-col justify-center border border-gray-100 border-2 rounded-md" style="box-shadow: 0 2px 2px rgba(0,0,0,.3);" id="test">
   <p>Welcome back, Would you like to resume your test?</p>
-  <button>Resume</button>
-  <button>Start Over</button>
+  <button hx-get="/tests" hx-target="#test" class="border rounded-md border-solid border-gray-400 p-2 mt-3">Resume</button>
+  <button hx-delete="/tests" hx-target="#test" class="border rounded-md border-solid border-gray-400 p-2 mt-3">Start Over</button>
 </div>
 {{ end }}
